fix(gatsby-node): removed node-script and added `postinstall` command to be executed before build

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "private": true,
     "description": "gitignore",
     "author": "PoolOfDeath20",
+    "scripts": {
+        "postinstall": "make generate-gatsby-config"
+    },
     "keywords": [
         "gitignored",
         "github gitignore",
