--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "gitignore",
     "author": "PoolOfDeath20",
     "scripts": {
-        "build": "make build"
+        "postinstall": "make generate-gatsby-config"
     },
     "keywords": [
         "gitignored",
@@ -19,6 +19,7 @@
         "babel-plugin-styled-components": "^2.0.7",
         "file-saver": "^2.0.5",
         "gatsby": "^4.13.0",
+        "gatsby-plugin-env-variables": "^2.2.0",
         "gatsby-plugin-image": "^2.13.0",
         "gatsby-plugin-manifest": "^4.13.0",
         "gatsby-plugin-sharp": "^4.13.0",
