--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -20,6 +20,15 @@ jobs:
                   make setup
 
             - name: Install Depedencies
+              env:
+                  MONGO_DB: db
+                  MONGO_COLLECTION_TECH: tech
+                  MONGO_COLLECTION_TIMESTAMP: timestamp
+                  MONGO_USER: runner
+                  MONGO_PASSWORD: mongodb
+                  MONGO_ADDRESS: address
+                  MONGO_SRV: srv
+                  NODE_ENV: production
               run: yarn
 
             - name: Run Linter
@@ -37,8 +46,8 @@ jobs:
                   MONGO_COLLECTION_TECH: tech
                   MONGO_COLLECTION_TIMESTAMP: timestamp
                   MONGO_USER: runner
-                  MONGO_ADDRESS: localhost
                   MONGO_PASSWORD: mongodb
+                  MONGO_ADDRESS: localhost
                   MONGO_PORT: 27017
                   NODE_ENV: test
               run: |
