--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -14,12 +14,10 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v2
 
-            - name: Install MongoDB
+            - name: Install and Setup MongoDB
               uses: supercharge/mongodb-github-action@1.7.0
               with:
                   mongodb-version: 5.0
-
-            - name: Setup MongoDB
               run: make setup
 
             - name: Install Depedencies
