--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -14,10 +14,12 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v2
 
-            - name: Install and Setup MongoDB
+            - name: Install MongoDB
               uses: supercharge/mongodb-github-action@1.7.0
               with:
                   mongodb-version: 5.0
+
+            - name: Setup MongoDB
               run: make setup-mongo
 
             - name: Install Depedencies
