--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -14,15 +14,18 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v2
 
-            - name: Install and Setup MongoDB
-              run: |
-                  make install
-                  make setup
+            - name: Install MongoDB
+              uses: supercharge/mongodb-github-action@1.7.0
+              with:
+                  mongodb-version: 5.0
+
+            - name: Setup MongoDB
+              run: make setup-mongo
 
             - name: Install Depedencies
               env:
                   NODE_ENV: development
-              run: yarn
+              run: make install
 
             - name: Run Linter
               run: make lint
