--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "gatsby-plugin-env-variables": "^2.2.0",
         "gatsby-plugin-image": "^2.13.0",
         "gatsby-plugin-manifest": "^4.13.0",
+        "gatsby-plugin-react-helmet": "^5.13.0",
         "gatsby-plugin-sharp": "^4.13.0",
+        "gatsby-plugin-sitemap": "^5.13.0",
         "gatsby-plugin-styled-components": "^5.13.0",
         "gatsby-source-filesystem": "^4.13.0",
         "gatsby-transformer-sharp": "^4.13.0",
