--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ],
     "dependencies": {
         "@szhsin/react-menu": "^3.0.1",
+        "axios": "^0.27.2",
         "babel-plugin-styled-components": "^2.0.7",
         "file-saver": "^2.0.5",
         "gatsby": "^4.13.0",
