feat(time-scrap): updated scrapper to scrap when when latest time scrapped < latest commit time instead of 24 hrs difference in 2 latest time scrapped

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,6 @@
         "outDir": "build",
         "preserveWatchOutput": true
     },
-    "include": [
-        "./src/**/*",
-        "./gatsby-node.ts",
-        "./gatsby-config.ts",
-        "./plugins/**/*"
-    ]
+    "include": ["src", "test"],
+    "exclude": ["node_modules"]
 }
