Commit time record (#20)
* feat(commit-time): migrated collection `timestamp` to `updatedtime` to include commit time included in git commit

* fix(ci-cd): amended github workflow

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -2,6 +2,9 @@ name: gitignored-ci-cd
 
 on: [push, pull_request]
 
+env:
+    IS_CI: true
+
 jobs:
     all:
         runs-on: ubuntu-latest
@@ -40,7 +43,7 @@ jobs:
               env:
                   MONGO_DB: testGitignored
                   MONGO_COLLECTION_TECH: tech
-                  MONGO_COLLECTION_TIMESTAMP: timestamp
+                  MONGO_COLLECTION_UPDATE_TIME: updatetime
                   MONGO_USER: runner
                   MONGO_PASSWORD: mongodb
                   MONGO_ADDRESS: localhost
