--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -3,43 +3,49 @@ name: gitignore-cli-ci-cd
 on: [push, pull_request]
 
 jobs:
-  all:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        threads:
-          - "4"
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+    all:
+        runs-on: ubuntu-latest
+        strategy:
+            fail-fast: false
+            matrix:
+                threads:
+                    - '4'
+        steps:
+            - name: Checkout Code
+              uses: actions/checkout@v2
 
-      - name: Install Rust
-        run: make install-rust
+            - name: Install Rust
+              run: make install-rust
 
-      - name: Install PNPM & Node
-        run: |
-          sudo apt-get install npm
-          sudo apt-get install nodejs
-          npm install --location=global pnpm
+            - name: Install PNPM & Node
+              run: |
+                  sudo apt-get install npm
+                  sudo apt-get install nodejs
+                  npm install --location=global pnpm
 
-      - name: Install Dependencies
-        run: make install
+            - name: Install Dependencies
+              run: make install
 
-      - name: Run Code Generator
-        run: make pre-prod
+            - name: Run Code Generator
+              run: make pre-prod
 
-      - name: Run Linter
-        run: make lint
+            - name: Run Linter
+              run: make lint
 
-      - name: Run Code Check
-        run: make check
+            - name: Run Code Check
+              run: make check
 
-      - name: Run Format Check
-        run: make format-check
+            - name: Run Format Check
+              run: make format-check
 
-      - name: Run Tests
-        run: make test-prod
+            - name: Run Tests
+              run: make test-prod
 
-      - name: Run Build
-        run: make build
+            - name: Run Build
+              run: make build
+
+            - name: Run Package
+              run: make package argv="-l --allow-dirty"
+
+            - name: Run Publish Dry Run
+              run: make publish argv="--dry-run --allow-dirty"
