--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "description": "The Web Application of Gitignored. A more UI/UX Friendly Web Application to Preview/Copy/Download Single or Multiple .gitignore File(s)",
     "dependencies": {
-        "@szhsin/react-menu": "^3.1.2",
+        "@szhsin/react-menu": "^3.2.0",
         "axios": "^0.27.2",
         "cors": "^2.8.5",
         "file-saver": "^2.0.5",
@@ -17,28 +17,28 @@
         "next-seo": "^5.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^4.4.0",
-        "react-select": "^5.4.0",
-        "react-switch": "^7.0.0",
+        "react-icons": "^4.6.0",
+        "react-select": "^5.5.0",
         "react-toastify": "^9.0.8",
-        "sharp": "^0.31.0",
-        "styled-components": "^5.3.5"
+        "styled-components": "^5.3.6"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/file-saver": "^2.0.5",
-        "@types/jest": "^29.0.3",
+        "@types/jest": "^29.1.2",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "@types/styled-components": "^5.1.26",
-        "@typescript-eslint/eslint-plugin": "^5.38.0",
-        "@typescript-eslint/parser": "^5.38.0",
-        "dotenv": "^16.0.2",
-        "esbuild": "^0.15.9",
-        "eslint": "^8.23.1",
-        "eslint-plugin-react": "^7.31.8",
-        "jest": "^29.0.3",
+        "@typescript-eslint/eslint-plugin": "^5.40.0",
+        "@typescript-eslint/parser": "^5.40.0",
+        "dotenv": "^16.0.3",
+        "esbuild": "^0.15.11",
+        "eslint": "^8.25.0",
+        "eslint-plugin-react": "^7.31.10",
+        "find-unused-exports": "^4.0.0",
+        "jest": "^29.2.0",
         "prettier": "^2.7.1",
-        "typescript": "^4.8.3"
+        "typescript": "^4.8.4",
+        "unimported": "^1.22.0"
     }
 }
