--- a/package.json
+++ b/package.json
@@ -12,31 +12,32 @@
         "hex-rgb": "^5.0.0",
         "iwanthue": "^2.0.0",
         "jszip": "^3.10.1",
-        "mongodb": "^4.10.0",
+        "mongodb": "^4.11.0",
         "next": "^12.3.1",
-        "next-seo": "^5.5.0",
+        "next-seo": "^5.8.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.6.0",
-        "react-select": "^5.5.0",
+        "react-select": "^5.5.4",
         "react-toastify": "^9.0.8",
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/file-saver": "^2.0.5",
-        "@types/jest": "^29.1.2",
+        "@types/jest": "^29.2.0",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "@types/styled-components": "^5.1.26",
-        "@typescript-eslint/eslint-plugin": "^5.40.0",
-        "@typescript-eslint/parser": "^5.40.0",
+        "@typescript-eslint/eslint-plugin": "^5.40.1",
+        "@typescript-eslint/parser": "^5.40.1",
+        "cases-of-test": "^0.0.1",
         "dotenv": "^16.0.3",
-        "esbuild": "^0.15.11",
-        "eslint": "^8.25.0",
+        "esbuild": "^0.15.12",
+        "eslint": "^8.26.0",
         "eslint-plugin-react": "^7.31.10",
         "find-unused-exports": "^4.0.0",
-        "jest": "^29.2.0",
+        "jest": "^29.2.1",
         "prettier": "^2.7.1",
         "typescript": "^4.8.4",
         "unimported": "^1.22.0"
