--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/file-saver": "^2.0.5",
-        "@types/jest": "^29.2.0",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "@types/styled-components": "^5.1.26",
@@ -33,13 +32,12 @@
         "@typescript-eslint/parser": "^5.40.1",
         "cases-of-test": "^0.0.1",
         "dotenv": "^16.0.3",
-        "esbuild": "^0.15.12",
         "eslint": "^8.26.0",
         "eslint-plugin-react": "^7.31.10",
         "find-unused-exports": "^4.0.0",
-        "jest": "^29.2.1",
         "prettier": "^2.7.1",
         "typescript": "^4.8.4",
-        "unimported": "^1.22.0"
+        "unimported": "^1.22.0",
+        "vitest": "^0.24.3"
     }
 }
