--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
+        "@poolofdeath20/eslint-config": "^0.0.1",
         "@types/cors": "^2.8.12",
         "@types/file-saver": "^2.0.5",
         "@types/react": "^18.0.21",
@@ -33,7 +34,9 @@
         "cases-of-test": "^0.0.1",
         "dotenv": "^16.0.3",
         "eslint": "^8.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-react": "^7.31.10",
+        "eslint-plugin-styled-components-a11y": "^1.0.0",
         "find-unused-exports": "^4.0.0",
         "prettier": "^2.7.1",
         "typescript": "^4.8.4",
