fix(font): align toastify font

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "hex-rgb": "^5.0.0",
         "iwanthue": "^2.0.0",
         "jszip": "^3.10.1",
+        "localforage": "^1.10.0",
         "mongodb": "^4.11.0",
         "next": "^12.3.2",
         "next-seo": "^5.14.0",
@@ -32,7 +33,6 @@
         "@typescript-eslint/eslint-plugin": "^5.42.0",
         "@typescript-eslint/parser": "^5.42.0",
         "cases-of-test": "^0.0.1",
-        "dotenv": "^16.0.3",
         "eslint": "^8.27.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-react": "^7.31.10",
