--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@typescript-eslint/eslint-plugin": "^5.42.0",
         "@typescript-eslint/parser": "^5.42.0",
         "cases-of-test": "^0.0.1",
+        "ci-info": "^3.7.1",
         "eslint": "^8.27.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-react": "^7.31.10",
