--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ yarn-error.log*
 # local env files
 .env
 .env.development
-.env.test
-.env.production
+.env.testing
+.env.productions
 .env.staging
 
 # vercel
