--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "prettier": "^2.7.1",
         "typescript": "^4.8.4",
         "unimported": "^1.22.0",
+        "vite-node": "^0.28.3",
         "vitest": "^0.24.5"
     }
 }
