--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "description": "The Web Application of Gitignored. A more UI/UX Friendly Web Application to Preview/Copy/Download Single or Multiple .gitignore File(s)",
     "dependencies": {
         "@szhsin/react-menu": "^3.2.1",
-        "axios": "^0.27.2",
+        "axios": "^1.3.1",
         "cors": "^2.8.5",
         "file-saver": "^2.0.5",
         "hex-rgb": "^5.0.0",
@@ -14,7 +14,7 @@
         "jszip": "^3.10.1",
         "localforage": "^1.10.0",
         "mongodb": "^4.11.0",
-        "next": "^12.3.2",
+        "next": "^13.1.6",
         "next-seo": "^5.14.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -32,7 +32,6 @@
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "^5.42.0",
         "@typescript-eslint/parser": "^5.42.0",
-        "cases-of-test": "^0.0.1",
         "ci-info": "^3.7.1",
         "eslint": "^8.27.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
@@ -42,6 +41,7 @@
         "prettier": "^2.7.1",
         "typescript": "^4.8.4",
         "unimported": "^1.22.0",
+        "vite-node": "^0.28.3",
         "vitest": "^0.24.5"
     }
 }
