--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint-plugin-react": "^7.31.10",
         "eslint-plugin-styled-components-a11y": "^1.0.0",
         "find-unused-exports": "^4.0.0",
+        "next-sitemap": "^3.1.49",
         "prettier": "^2.7.1",
         "typescript": "^4.8.4",
         "unimported": "^1.22.0",
