fix(ci/cd): install dependencies before install mongodb

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -20,18 +20,16 @@ jobs:
             - name: Install PNPM
               run: |
                   sudo apt install npm
-                  npm i --location=global pnpm
+                  npm i --location=global pnpm@7
+
+            - name: Install Depedencies
+              run: make install
 
             - name: Install MongoDB
               run: make install-mongo
 
             - name: Setup MongoDB
               run: make setup-mongo
-
-            - name: Install Depedencies
-              env:
-                  NODE_ENV: development
-              run: make install
 
             - name: Run Linter
               run: make lint
