--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -50,9 +50,7 @@ jobs:
                   MONGO_ADDRESS: localhost
                   MONGO_PORT: 27017
                   NODE_ENV: test
-              run: |
-                  make test
-                  rm -rf __tests__
+              run: make test
 
             - name: Run Build
               env:
