--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -32,6 +32,11 @@ jobs:
               run: make start-mongo
 
             - name: Migrate Document
+              options: >-
+                  --health-cmd mongo
+                  --health-interval 10s
+                  --health-timeout 5s
+                  --health-retries 5
               run: make migrate-mongo
 
             - name: Run Linter
