--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -32,12 +32,9 @@ jobs:
               run: make start-mongo
 
             - name: Migrate Document
-              options: >-
-                  --health-cmd mongo
-                  --health-interval 10s
-                  --health-timeout 5s
-                  --health-retries 5
-              run: make migrate-mongo
+              run: |
+                  sleep 5
+                  make migrate-mongo
 
             - name: Run Linter
               run: make lint
