--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -20,7 +20,7 @@ jobs:
             - name: Install PNPM
               run: |
                   sudo apt install npm
-                  npm i --location=global pnpm
+                  npm i --location=global pnpm@8
 
             - name: Install Depedencies
               run: make install
@@ -28,8 +28,13 @@ jobs:
             - name: Install MongoDB
               run: make install-mongo
 
-            - name: Setup MongoDB
-              run: make setup-mongo
+            - name: Start MongoDB
+              run: make start-mongo
+
+            - name: Migrate Document
+              run: |
+                  sleep 1.5
+                  make migrate-mongo
 
             - name: Run Linter
               run: make lint
@@ -50,9 +55,7 @@ jobs:
                   MONGO_ADDRESS: localhost
                   MONGO_PORT: 27017
                   NODE_ENV: test
-              run: |
-                  make test
-                  rm -rf __tests__
+              run: make test
 
             - name: Run Build
               env:
