New cli parser (#16)
* feat(cli): completed parser for help, version and update

* feat(cli): completed parser for search

* test(cli): improve unreacable branch message

* feat(cli): completed parser for preview

* feat(cli): completed parser for show

* feat(cli): completed parser for generate

* feat(cli): completed parser for append

* test(cli): improved test for `preview`

* refactor(cli): use `KeywordKind` to emphasis on `is_mandatory` and
`keyword`

* fix(cli): allow `outdir` in `generate` & `append` as well as pick
invalid arguments

* refactor(cli): reduce code duplication

* refactor(cli): remove `target` in favor of `outdir` and improved
integration test

* refactor(cli): migrate `cli2` to `cli`

* feat(cli): adopted cli functionality to main

* feat(cli): can run command except help and version

* temp(cli/options): continue options for help and version

* feat(cli/options): handled every options cases

* test(cli): simplied test assertion

* refactor(cli): remove unused `is_mandatory`

* feat(cli): allow help page to print messages

* lint(cli): remove unused code

* fix(ci): rewrite npm packages installation command

* fix(ci): remove `pnpm` cache

* lint(cli/template): fixed `lint` issue

* script(lock-file): reformatted based on installer

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -17,14 +17,16 @@ jobs:
             - name: Install Rust
               run: make install-rust
 
-            - name: Install PNPM & Node
-              run: |
-                  sudo apt-get install npm
-                  sudo apt-get install nodejs
-                  npm install --location=global pnpm
+            - uses: pnpm/action-setup@v2
+              with:
+                  version: 8
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v3
+              with:
+                  node-version: ${{ matrix.node-version }}
 
-            - name: Install Dependencies
-              run: make install
+            - name: Install Node Dependencies
+              run: make install-node-packages
 
             - name: Run Code Generator
               run: make pre-prod
