--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,10 +27,10 @@
 		"verbatimModuleSyntax": true,
 		"plugins": [
 			{
-				"name": "next"
-			}
-		]
+				"name": "next",
+			},
+		],
 	},
 	"include": ["*.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules"],
 }
