--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@poolofdeath20/util": "^0.6.12",
 		"@supabase/supabase-js": "^2.39.3",
-		"@tanstack/react-query": "5.17.19",
+		"@tanstack/react-query": "^4.36.1",
 		"@trpc/client": "^10.45.0",
 		"@trpc/next": "^10.45.0",
 		"@trpc/react-query": "^10.45.0",
