--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,36 +1,5 @@
 {
-	"compilerOptions": {
-		"target": "es6",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"strict": true,
-		"forceConsistentCasingInFileNames": true,
-		"noFallthroughCasesInSwitch": true,
-		"module": "esnext",
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"noEmit": true,
-		"jsx": "preserve",
-		"noImplicitReturns": true,
-		"incremental": true,
-		"checkJs": false,
-		"noUnusedParameters": true,
-		"noUncheckedIndexedAccess": true,
-		"noUnusedLocals": true,
-		"pretty": true,
-		"preserveWatchOutput": true,
-		"outDir": ".tscache",
-		"allowJs": false,
-		"verbatimModuleSyntax": true,
-		"plugins": [
-			{
-				"name": "next",
-			},
-		],
-	},
+	"extends": "@poolofdeath20/tsconfig/next",
 	"include": ["*.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"],
 }
