--- a/apps/web/supabase/config/normal.toml
+++ b/apps/web/supabase/config/normal.toml
@@ -1,6 +1,6 @@
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "mysql-gitignored"
+project_id = "gitignored"
 
 [api]
 enabled = true
