--- a/package.json
+++ b/package.json
@@ -2,17 +2,5 @@
 	"author": "PoolOfDeath20",
 	"name": "gitignored",
 	"description": "gitignored",
-	"license": "MIT",
-	"scripts": {
-		"postinstall": "cd apps/cli && make install-rust",
-		"lint": "pnpm --stream -r lint",
-		"typecheck": "pnpm --stream -r typecheck",
-		"format-write": "pnpm --stream -r format-write",
-		"format-check": "pnpm --stream -r format-check",
-		"generate-type-for-ci": "pnpm --stream -r generate-type-for-ci",
-		"pretest": "cd apps/web && make build-testing",
-		"test": "pnpm pretest && pnpm --stream -r test",
-		"test-cli": "pnpm --stream -r test --filter=cli",
-		"test-web": "pnpm --stream -r test --filter=web"
-	}
+	"license": "MIT"
 }
