fix(cli/listing): convert all `list` word to `show`

--- a/apps/cli/Makefile
+++ b/apps/cli/Makefile
@@ -5,65 +5,68 @@ outdir=temp-dev/temp-two
 
 generate-type-for-ci:
 	make install-node-packages &&\
-		make pre-dev
+		make pre-development
 
 code-gen:
 	node script/code-gen.js && make format-write
 
-pre-dev:
+pre-development:
 	cp config/.env.development .env && make code-gen
 
-pre-prod:
+pre-production:
 	cp config/.env.production .env && make code-gen
 
 # cli-executable
-default: pre-dev
+default: pre-development
 	cargo run
 
-help: pre-dev
+help: pre-development
 	cargo run -- --help
 
-version: pre-dev
+version: pre-development
 	cargo run -- --version
 
-show: pre-dev
-	cargo run -- template --list
+show: pre-development
+	cargo run -- template --show
 
-show-column: pre-dev
-	cargo run -- template --list --column $(column)
+show-column: pre-development
+	cargo run -- template --show --column $(column)
 
-preview: pre-dev
+preview: pre-development
 	cargo run -- template --preview rust node java vscode jetbrain
 
-search: pre-dev
+search: pre-development
 	cargo run -- template --search rust node java vscode jetbrain whatever
 
-generate: pre-dev
+generate: pre-development
 	cargo run -- template --generate rust node java vscode jetbrain whatever ${argument}
 
-force-generate: pre-dev
+force-generate: pre-development
 	make generate argument=--force
 
-generate-outdir: pre-dev
+generate-outdir: pre-development
 	rm -rf ${outdir} && cargo run -- template --generate rust node java vscode jetbrain whatever --outdir ${outdir}
 
-append: pre-dev
+append: pre-development
 	cargo run -- template --append rust node java vscode jetbrain whatever
 
-append-absent-outdir: pre-dev
+append-absent-outdir: pre-development
 	rm -rf ${outdir} && cargo run -- template --append rust node java vscode jetbrain whatever --outdir ${outdir}
 
-append-existing-outdir: pre-dev
+append-existing-outdir: pre-development
 	cargo run -- template --append rust node java vscode jetbrain whatever --outdir ${outdir}
 
-update: pre-dev
+update: pre-development
 	cargo run -- template --update
 
 # non cli-executable
 typecheck:
 	cargo check
 
-build: pre-prod
+build-development: pre-development
+	rm -rf target/release && cargo build --release
+
+build-production: pre-production
 	rm -rf target/release && cargo build --release
 
 pre-test:
@@ -72,12 +75,12 @@ pre-test:
 test:
 	cargo test --no-fail-fast
 
-mid-test-dev: pre-dev pre-test test
+mid-test-dev: pre-development pre-test test
 
-test-dev:
+test-development:
 	node script/test-dev.js
 
-test-prod: pre-prod pre-test test
+test-production: pre-production pre-test test
 
 format-write:
 	cargo fmt
