--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -8,6 +8,6 @@
         "format-write": "make format-write",
         "lint": "make lint",
         "generate-type-for-ci": "make generate-type-for-ci",
-        "test": "make test-dev"
+        "test": "make test-development"
     }
 }
