fix(actions): fix any wrong command

--- a/.github/workflows/root.yaml
+++ b/.github/workflows/root.yaml
@@ -47,7 +47,7 @@ jobs:
             # cli
             - name: Run Cli Test
               working-directory: apps/cli
-              run: make test-developement
+              run: make test-development
 
             - name: Run Cli Build
               working-directory: apps/cli
