Fix cli listing (#54)
* fix(cli/listing): convert all `list` word to `show`

* fix(ci/test): separate test for better output

* fix(web/test): run `build-testing` before any test command

* fix(actions): fix any wrong command

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -7,7 +7,6 @@
         "format-check": "make format-check",
         "format-write": "make format-write",
         "lint": "make lint",
-        "generate-type-for-ci": "make generate-type-for-ci",
-        "test": "make test-dev"
+        "generate-type-for-ci": "make generate-type-for-ci"
     }
 }
