refactor(cli/config): updated `repository`

--- a/apps/cli/Cargo.toml
+++ b/apps/cli/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.7"
 edition = "2021"
 authors = ["PoolOfDeath20 <gervinfungdaxuen@gmail.com>"]
 description ="The CLI Application of Gitignored. Provide A Faster Way to Generate .gitignore File via Caching"
-repository = "https://github.com/Gitignored-App/cli"
+repository = "https://github.com/gervinfung/gitignored"
 readme = "README.md"
 homepage = "https://gitignored.vercel.app"
 license-file = "LICENSE"
