feat(cli/open-link): allow open home page of `gitignored` through command line arguments

--- a/apps/cli/Makefile
+++ b/apps/cli/Makefile
@@ -26,6 +26,9 @@ help: pre-development
 version: pre-development
 	cargo run -- --version
 
+open-link: pre-development
+	cargo run -- --open-link
+
 show: pre-development
 	cargo run -- template --show
 
