--- a/apps/cli/Cargo.toml
+++ b/apps/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gitignored"
+name = "gitignored-cli"
 version = "0.0.7"
 edition = "2021"
 authors = ["PoolOfDeath20 <gervinfungdaxuen@gmail.com>"]
@@ -25,3 +25,4 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 strsim = "0.10.0"
+webbrowser = "0.8.12"
