--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,8 +2,10 @@
 	"name": "@gitignored/web",
 	"author": "PoolOfDeath20",
 	"private": true,
+	"description": "A web app for gitignored",
+	"license": "CC-BY-NC-SA-4.0",
 	"scripts": {
-		"postinstall": "make opt-out-telemetry && pnpm prettier-config-generate && node_modules/puppeteer/install.mjs",
+		"postinstall": "make opt-out-telemetry && pnpm prettier-config-generate && mv .prettierrc ../../",
 		"typecheck": "make typecheck",
 		"format-check": "make format-check",
 		"format-write": "make format-write",
@@ -14,7 +16,7 @@
 		"@chakra-ui/react": "^2.8.2",
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
-		"@poolofdeath20/util": "^0.6.12",
+		"@poolofdeath20/util": "^0.7.1",
 		"@supabase/supabase-js": "^2.39.3",
 		"@tanstack/react-query": "^4.36.1",
 		"@trpc/client": "^10.45.0",
