packages(prettier-config-generator): moved `prettier-config-generator` from `apps/web` to workspace root

--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
 	"author": "PoolOfDeath20",
 	"name": "gitignored",
 	"description": "A UI/UX friendly application to search/generated .gitignore files",
-	"license": "MIT"
+	"license": "MIT",
+	"scripts": {
+		"postinstall": "prettier-config-generate"
+	},
+	"devDependencies": {
+		"@poolofdeath20/prettier-config-generator": "^0.0.1"
+	}
 }
