--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
 	"description": "A web app for gitignored",
 	"license": "CC-BY-NC-SA-4.0",
 	"scripts": {
-		"postinstall": "make opt-out-telemetry && pnpm prettier-config-generate && mv .prettierrc ../../",
+		"postinstall": "make opt-out-telemetry",
 		"typecheck": "make typecheck",
 		"format-check": "make format-check",
 		"format-write": "make format-write",
@@ -46,7 +46,6 @@
 	"devDependencies": {
 		"@ducanh2912/next-pwa": "^10.2.2",
 		"@poolofdeath20/eslint-config": "^0.3.2",
-		"@poolofdeath20/prettier-config-generator": "^0.0.1",
 		"@poolofdeath20/tsconfig": "^0.0.0",
 		"@types/cors": "^2.8.17",
 		"@types/file-saver": "^2.0.7",
