--- a/apps/cli/Makefile
+++ b/apps/cli/Makefile
@@ -26,6 +26,12 @@ help: pre-development
 version: pre-development
 	cargo run -- --version
 
+open-link: pre-development
+	cargo run -- open-link
+
+uninstall: pre-development
+	cargo run -- uninstall
+
 show: pre-development
 	cargo run -- template --show
 
