--- a/.github/workflows/root.yaml
+++ b/.github/workflows/root.yaml
@@ -1,4 +1,4 @@
-name: gitignored-ci
+name: Gitignored CI
 
 on: [push, pull_request]
 
@@ -15,9 +15,11 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v3
 
-            - uses: pnpm/action-setup@v2
+            - name: Setup Pnpm
+              uses: pnpm/action-setup@v2
               with:
                   version: 8
+
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
