--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -3,7 +3,7 @@
     "author": "PoolOfDeath20",
     "private": true,
     "scripts": {
-		"postinstall": "make install-rust"
+        "postinstall": "make install-rust",
         "typecheck": "make typecheck",
         "format-check": "make format-check",
         "format-write": "make format-write",
