--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,7 @@
 		"@emotion/styled": "^11.11.5",
 		"@poolofdeath20/util": "^0.8.0",
 		"@supabase/supabase-js": "^2.43.4",
-		"@tanstack/react-query": "^5.40.0",
+		"@tanstack/react-query": "^4.36.1",
 		"@trpc/client": "^10.45.2",
 		"@trpc/next": "^10.45.2",
 		"@trpc/react-query": "^10.45.2",
@@ -41,7 +41,7 @@
 		"react-syntax-highlighter": "^15.5.0",
 		"react-toastify": "^10.0.5",
 		"superjson": "^2.2.1",
-		"valibot": "0.31.0-rc.6"
+		"valibot": "^0.30.0"
 	},
 	"devDependencies": {
 		"@ducanh2912/next-pwa": "^10.2.7",
