fix(web): postfix `test-integration` with `copy-env-testing` in Make

--- a/apps/web/Makefile
+++ b/apps/web/Makefile
@@ -123,7 +123,7 @@ test-type:
 test-unit:
 	pnpm vitest test/unit/**/**.test.ts $(arguments)
 
-test-integration:
+test-integration: copy-env-testing
 	make test-type path="integration" arguments="$(arguments)"
 
 test-snapshot:
