--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,9 +44,12 @@
 	},
 	"devDependencies": {
 		"@ducanh2912/next-pwa": "^10.2.8",
+		"@eslint/compat": "^1.1.1",
+		"@eslint/js": "^9.8.0",
 		"@poolofdeath20/eslint-config": "^0.3.4",
-		"@poolofdeath20/tsconfig": "^0.1.0",
+		"@poolofdeath20/tsconfig": "^0.1.1",
 		"@types/cors": "^2.8.17",
+		"@types/eslint__js": "^8.42.3",
 		"@types/file-saver": "^2.0.7",
 		"@types/jest-image-snapshot": "^6.4.0",
 		"@types/react": "^18.3.3",
@@ -55,7 +58,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
 		"ci-info": "^4.0.0",
-		"eslint": "^8.57.0",
+		"eslint": "^9.8.0",
 		"eslint-plugin-jsx-a11y": "^6.9.0",
 		"eslint-plugin-react": "^7.35.0",
 		"gen-env-type-def": "^0.0.4",
@@ -67,6 +70,7 @@
 		"sql-formatter": "15.3.2",
 		"supabase": "^1.187.10",
 		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.0.1",
 		"vite-node": "^2.0.4",
 		"vitest": "^2.0.4"
 	}
