--- a/apps/web/Makefile
+++ b/apps/web/Makefile
@@ -110,7 +110,7 @@ format-write:
 
 ## lint
 lint:
-	pnpm eslint --ignore-path .gitignore --ext .mjs,.tsx,.ts --color && pnpm knip
+	pnpm eslint . --color && pnpm knip
 
 ## typecheck
 typecheck:
