--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
 		"generate-type-for-ci": "make generate-type-for-ci"
 	},
 	"dependencies": {
-		"@chakra-ui/react": "^2.10.4",
+		"@chakra-ui/react": "^3.1.2",
 		"@emotion/react": "^11.13.5",
 		"@emotion/styled": "^11.13.5",
 		"@poolofdeath20/util": "^0.8.2",
@@ -31,7 +31,7 @@
 		"hex-rgb": "^5.0.0",
 		"iwanthue": "^2.0.0",
 		"jszip": "^3.10.1",
-		"next": "^14.2.18",
+		"next": "^15.0.3",
 		"next-seo": "^6.6.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -40,7 +40,7 @@
 		"react-syntax-highlighter": "^15.6.1",
 		"react-toastify": "^10.0.6",
 		"superjson": "^2.2.1",
-		"valibot": "^0.42.1"
+		"valibot": "1.0.0-beta.7"
 	},
 	"devDependencies": {
 		"@ducanh2912/next-pwa": "^10.2.9",
@@ -62,7 +62,7 @@
 		"next-sitemap": "^4.2.3",
 		"prettier": "^3.3.3",
 		"puppeteer": "^22.15.0",
-		"sql-formatter": "15.4.2",
+		"sql-formatter": "15.4.6",
 		"supabase": "^1.223.10",
 		"typescript": "^5.6.3",
 		"vite-node": "^2.1.5",
