--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
 		"generate-type-for-ci": "make generate-type-for-ci"
 	},
 	"dependencies": {
-		"@chakra-ui/react": "^3.2.3",
+		"@chakra-ui/react": "^2.10.4",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
 		"@poolofdeath20/util": "^0.8.2",
@@ -40,11 +40,11 @@
 		"react-syntax-highlighter": "^15.6.1",
 		"react-toastify": "^11.0.2",
 		"superjson": "^2.2.2",
-		"valibot": "1.0.0-beta.9"
+		"valibot": "^0.42.1"
 	},
 	"devDependencies": {
 		"@ducanh2912/next-pwa": "^10.2.9",
-		"@poolofdeath20/eslint-config": "^0.4.1",
+		"@poolofdeath20/eslint-config": "^0.4.2",
 		"@poolofdeath20/tsconfig": "^0.1.1",
 		"@types/cors": "^2.8.17",
 		"@types/file-saver": "^2.0.7",
@@ -53,6 +53,7 @@
 		"@types/react-dom": "^19.0.2",
 		"@types/react-syntax-highlighter": "^15.5.13",
 		"ci-info": "^4.1.0",
+		"eslint": "^9.17.0",
 		"gen-env-type-def": "^0.0.4",
 		"jest-image-snapshot": "^6.4.0",
 		"knip": "^5.41.1",
